--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "finnish-bank-utils",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "main": "./dist/finnish-bank-utils.js",
   "description": "A micro Javascript library for validating, creating and formatting Finnish IBAN bank account numbers and reference numbers. Can parse payment details from Finnish virtual barcodes.",
   "scripts": {
@@ -28,7 +28,8 @@
   "contributors": [
     "Sakari Tuominen",
     "Jonas Berlin",
-    "hruoho"
+    "hruoho",
+    "swftvsn"
   ],
   "license": "MIT",
   "bugs": {
